--- a/figures.html
+++ b/figures.html
@@ -319,7 +319,7 @@ $(document).ready(function () {
 <p><br />
 </p>
 <div class="figure">
-<img src="figures/figure1.jpeg" alt="Figure 1: Weekly excess non-COVID-19 deaths are higher than expected deaths." width="700" />
+<img src="figures/figure1.jpeg" width="700" alt="" />
 <p class="caption"><strong>Figure 1:</strong> Weekly excess non-COVID-19 deaths are higher than expected deaths.</p>
 </div>
 <p>Note: red line: all-cause registered deaths, purple line: registered non-COVID-19 deaths, dashed black line: expected (forecast) deaths with confidence interval; estimated quantities in italics</p>
@@ -327,14 +327,14 @@ $(document).ready(function () {
 <br />
 </p>
 <div class="figure">
-<img src="figures/figure2.jpeg" alt="Figure 2: Weekly excess non-COVID-19 deaths are so small that they are not different than expected deaths." width="700" />
+<img src="figures/figure2.jpeg" width="700" alt="" />
 <p class="caption"><strong>Figure 2:</strong> Weekly excess non-COVID-19 deaths are so small that they are not different than expected deaths.</p>
 </div>
 <p><br />
 <br />
 </p>
 <div class="figure">
-<img src="figures/figure3.jpeg" alt="Figure 3: Weekly excess non-COVID-19 deaths are lower than expected deaths." width="700" />
+<img src="figures/figure3.jpeg" width="700" alt="" />
 <p class="caption"><strong>Figure 3:</strong> Weekly excess non-COVID-19 deaths are lower than expected deaths.</p>
 </div>
 <p><br />
